# kitchen-sync

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  setup.sh  tsconfig.json  uninstall.sh
src/: config.ts  index.ts  profiles.ts  sync.ts  ui.ts
src/adapters/: base.ts  docker.ts  index.ts  local.ts  ssh.ts
src/commands/: diff.ts  init.ts  install.ts  list-profiles.ts  list.ts  pull.ts  push.ts  status.ts
src/kitchen_sync/: __init__.py  cli.py  config.py  profiles.py  sync.py
src/kitchen_sync/adapters/: __init__.py  base.py  docker.py  local.py  ssh.py
tests/: adapters.test.ts  cli.test.ts  config.test.ts  conftest.py  fixtures.ts  sync.test.ts  test_adapters.py  test_cli.py  test_config.py  test_sync.py
