[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitchen-sync"
version = "0.1.0"
description = "Sync agentic engineering configs across environments using git"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Aaron Yan" }]
keywords = ["cli", "sync", "config", "claude", "dotfiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
kitchen-sync = "kitchen_sync.cli:cli"
ksync = "kitchen_sync.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kitchen_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
